syntax = "proto2";
package shipping_provider;
option go_package = "etop.vn/backend/pb/etop/etc/shipping_provider";

import "gogoproto/gogo.proto";
option (gogoproto.gogoproto_import)         = false;

enum ShippingProvider {
    unknown = 0;
    all = 22;
    manual = 20;
    ghn = 19;
    ghtk = 21;
    vtpost = 23;
}
